package S201250137.List;

public interface Sort {
    void load(int[] sortedElement);
    void sort();
    String getProcess();

}
